--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -119,6 +119,16 @@
     // Si un jugador roba una carta divinada, la guardamos aquí (se inicia a array de arrays luego)
     var players_divined = undefined
 
+    function getPlayersDivined() {
+        if (players_divined == undefined) {
+            players_divined = []
+            for(i = 0; i < game_state['players'].length; i++) {
+                players_divined.push([])
+            }
+        }
+        return players_divined
+    }
+
     // Mensajes de chat
     var chat_messages = []
     // Cuánto scroll se ha hecho
@@ -361,14 +371,6 @@ function startPlayingStates(){
         game_state_index += 1
         var gstate = game_state_queue[game_state_index]
 
-        // Hay que popular players_divined con el número de jugadores; en este sitio se ejecuta cuando empieza la partida y no cambia el número de jugadores
-        if (players_divined == undefined) {
-            players_divined = []
-            for(i = 0; i < gstate['players'].length; i++) {
-                players_divined.push([])
-            }
-        }
-
         // Hacemos animaciones y eso
         if (gstate != undefined) {
             // Si no ha pasado nada, repintamos directamente
@@ -431,14 +433,14 @@ function startPlayingStates(){
                         has_played_card = true
                     }
                     // Eliminamos la carta que sabíamos que tenía si la juega
-                    for (i = 0; i < players_divined[gstate['current_player']].length; i++){
-                        var ccard = players_divined[gstate['current_player']][i]
+                    var pvined = getPlayersDivined()
+                    for (i = 0; i < pvined[gstate['current_player']].length; i++){
+                        var ccard = pvined[gstate['current_player']][i]
                         if (gstate['action']['card']['suit'] == ccard['suit'] && gstate['action']['card']['number'] == ccard['number']) {
-                            players_divined[gstate['current_player']].splice(i, 1)
+                            pvined[gstate['current_player']].splice(i, 1)
                             break
                         }
                     }
-                    
                     animatePlayCard(gstate)
                 } else if (gstate['action']['type'] == "draw_card"){
                     // Actualizamos el estado de los botones de la UI
@@ -451,7 +453,8 @@ function startPlayingStates(){
                     }
                     // Si sabíamos qué carta era, nos la apuntamos
                     if (last_divined != undefined){
-                        players_divined[gstate['current_player']].push(last_divined)
+                        var pvined = getPlayersDivined()
+                        pvined[gstate['current_player']].push(last_divined)
                         last_divined = undefined
                         divine_group.clear(true, true)
                     }
@@ -465,7 +468,8 @@ function startPlayingStates(){
                     }
                     // Si sabíamos qué carta era, nos la apuntamos
                     if (last_divined != undefined){
-                        players_divined[gstate['current_player']].push(last_divined)
+                        var pvined = getPlayersDivined()
+                        pvined[gstate['current_player']].push(last_divined)
                         last_divined = undefined
                         divine_group.clear(true, true)
                     }
