--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -264,39 +264,6 @@
         }
     }
 
-    // Se ejecuta cuando la partida termina
-    function gameWon(player) {
-        if (game_state["host"] == playerIndex) {
-            drawBeginMatch()
-        }
-        drawWinner(player)
-        scene.sound.play("game-won-sound")
-        // Reseteamos también la cola de estados para liberar memoria
-        game_state_queue = [undefined]
-        game_state_index = 0
-
-        has_played_card = false
-        has_played_king = false
-        can_end_turn = false
-        drawn_this_turn = 0
-    }
-
-    function updateDisplay() {
-        drawUI()
-        drawYourHand()
-        drawPlayers()
-        drawPiles()
-        drawDrawCounter()
-        drawTurnDirection()
-    }
-
-    // Recibido un porcentaje, devuelve los píxeles
-    function calculateCoordsX(x) {
-        return x * game.scale.baseSize._width
-    }
-    function calculateCoordsY(y) {
-        return y * game.scale.baseSize._height
-    }
     // Función módulo porque JavaScript tiene retraso
     function modulo(n, m) {
         return ((n % m) + m) % m;
@@ -323,102 +290,10 @@ function appendToRecord(message) {
     appendToChatbox(message)
 }
 
-// Actualiza el estado de juego, pintando en pantalla lo que haga falta
-// data: Paquete de datos recibido del servidor. Tiene un estado y una acción que ha llevado a dicho estado.
-function updateGameFromState(data) {
-    // El primer estado es "undefined"
-    if (data == undefined){
-        return undefined;
-    }
-    //console.log("Mostrando en pantalla estado: ")
-    //console.log(data['action'])
-    game_state["game_status"] = data["game_status"]
-    game_state["last_suit"] = data["last_suit"]
-    game_state["last_number"] = data["last_number"]
-    game_state["last_effect"] = data["last_effect"]
-    game_state["current_player"] = data["current_player"]
-    game_state["next_player"] = data["next_player"]
-    game_state["turn_direction"] = data["turn_direction"]
-    game_state["draw_counter"] = data["draw_counter"]
-    game_state["draw_pile"] = data["draw_pile"]
-    game_state["play_pile"] = data["play_pile"]
-    game_state["hand"] = data["hand"]
-    game_state["players"] = data["players"]
-    game_state["host"] = data["host"]
-
-    // Recuperamos nuestro nombre
-    if (playerName == undefined) {
-        playerName = data["players"][playerIndex][0]
-    }
-
-    // Si se está esperando a empezar, muestra el botón para empezar la partida
-    if (game_state["game_status"] != "PLAYING" && data["host"] == playerIndex) {
-        drawBeginMatch()
-    }
-    // Si no se está esperando, actualiza el HUD
-    if (game_state["game_status"] != "WAITING") {
-        updateDisplay()
-    }
-}
-
 // Añade un estado a la cola de estados, a actualizar a la más pronta conveniencia
 // data: Paquete de datos recibido del servidor. Tiene un estado y una acción que ha llevado a dicho estado.
 function addToStateQueue(data) {
     game_state_queue.push(data)
-    //console.log("Añadido a la cola: " + String(data['action']))
-    //console.log("Cola actual: " + String(game_state_queue))
-}
-
-// Se llama a esta función cuando haya un estado pendiente de mostrar en la pantalla
-// Inicia la animación correspondiente al siguiente estado y actualiza el pointer
-function startPlayingStates(){
-    // Marcamos que ya estamos procesando los estados, para no pisarnos
-    game_state_processing = true
-    // Nos aseguramos de que haya algo que hacer
-    if (game_state_index < game_state_queue.length -1) {  
-        // Recogemos el estado siguiente
-        game_state_index += 1
-        var gstate = game_state_queue[game_state_index]
-
-        // Hacemos animaciones y eso
-        if (gstate != undefined) {
-            // Si no ha pasado nada, repintamos directamente
-            if (gstate['action'] == undefined) {
-                // Repintamos la UI
-                updateGameFromState(gstate)
-                // Guardamos que hemos terminado
-                game_state_processing = false
-            // Ponemos la animación correspondiente a lo que ha pasado
-            } else {
-                if (gstate['action']['type'] == "end_turn"){
-                    processEndTurn(gstate)
-                } else if (gstate['action']['type'] == "begin_match") {
-                    processBeginMatch(gstate)
-                } else if (gstate['action']['type'] == "game_won") {
-                    processGameWon(gstate)
-                } else if (gstate['action']['type'] == "play_card") {
-                    processPlayCard(gstate)
-                } else if (gstate['action']['type'] == "draw_card"){
-                    processDrawCard(gstate)
-                } else if (gstate['action']['type'] == "draw_card_forced"){
-                    processDrawCardForced(gstate)
-                } else if (gstate['action']['type'] == "switch") {
-                    processSwitch(gstate)
-                // Si ha llegado una acción desconocida, repintamos y listo
-                // Esto no debería pasar nunca, es un failsafe
-                } else {
-                    // Repintamos la UI
-                    updateGameFromState(gstate)
-                    // Guardamos que hemos terminado
-                    game_state_processing = false
-                }
-            }
-        }
-    } else {
-        // Si no había nada que hacer...
-        // Esto no debería ejecutarse, pero no hace daño dejarlo
-        game_state_processing = false
-    }
 }
 
     // Hace lo que haga falta cuando llega un mensaje
@@ -427,35 +302,14 @@ function startPlayingStates(){
         var data = JSON.parse(e.data);
         // Recupera el tipo del mensaje
         var message_type = data['type']
-        // Actualiza el estado de juego
+        // Paquete es un estado de juego
         if (message_type == "game_state"){
             addToStateQueue(data)
-            // Recuperamos lo que ha pasado y lo ponemos en el chat
-            if (data['action'] != undefined) {
-                var action = data['action']
-                var cbox_message = undefined
-                switch(String(action['type'])) {
-                    case "begin_match":
-                        break;
-                    case "end_turn":
-                        break;
-                    case "draw_card":
-                        break;
-                    case "draw_card_forced":
-                        break;
-                    case "play_card":
-                        break;
-                    case "game_won":
-                        break;
-                    case "switch":
-                        break;
-                }
-            }
         // Paquete es un mensaje de chat
         } else if (message_type == "chat_message"){
             var message = data['message'];
             var username = data['username'];
-            var composed = username + ": " + message
+            var composed = "<b>" + username + "</b>" + ": " + message
             appendToChatbox(composed);
         // Paquete es una notificación de sistema
         } else if (message_type == "notification"){
